--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 <style type="text/css">
+
 .center{
     //margin: auto;
     //width: 80%;
@@ -23,6 +24,7 @@
             animation-duration: 10s;
             -webkit-animation-fill-mode: both;
             animation-fill-mode: both;
+
          }
 
  @-webkit-keyframes fadeIn {
@@ -102,24 +104,41 @@
    -ms-filter: grayscale(300%);
    -o-filter: grayscale(300%);
    filter: grayscale(300%);
-
 }
 
 </style>
 
 
-
-
 <div class="center " style="">
- <div class="mobile-head animated fadeIn slide-in-up" style="font-size:35px; color:#000000">최적의 온라인마케팅</div>
- <div class="mobile-head animated fadeIn" style="font-size:35px; color:#000000; animation-delay: 1s; -webkit-animation-delay: 1s; /* Safari 4.0 - 8.0 */">이씨플라자</div>
- <div class="mobile-head animated fadeIn" style="font-size:35px; color:#000000; animation-delay: 2s; -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */"><i class="fas fa-address-card"></i></div>
+ <div class="mobile-head animated fadeIn slide-in-up" style="font-size:2em; color:#ffffff">최적의 온라인마케팅</div>
+ <div class="mobile-head animated fadeIn" style="font-size:2em; color:#ffffff; animation-delay: 1s; -webkit-animation-delay: 1s; /* Safari 4.0 - 8.0 */">이씨플라자</div>
+ <div class="mobile-head animated fadeIn" style="font-size:2em; color:#ffffff; animation-delay: 2s; -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */"><i class="fas fa-address-card"></i></div>
 </div>
+
+
+
 
 <video autoplay muted loop id="myVideo">
     <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
+
+<style type="text/css">
+.pic1{
+	width:190px;
+	height:190px;
+	opacity: 1;
+	filter: alpha(opacity=100);
+	background: url(http://www.corelangs.com/css/box/img/duck.png) no-repeat;
+}
+.pic1:hover
+{
+	opacity: 0.3;
+	filter: alpha(opacity=30);
+}
+</style>
+<div class="pic1">
+</div>
 
 </body>
 </html>
