--- a/headline.html
+++ b/headline.html
@@ -8,9 +8,6 @@ body{
 
 }
 
-.mobile{
-  max-width: 600px;
-}
 
 .center{
     //margin: auto;
@@ -114,16 +111,11 @@ body{
 
 
 <div class="center " style="">
- <div class="mobile-head animated fadeIn slide-in-up" style="font-size:3em; color:#ffffff">최적의 온라인마케팅</div>
- <div class="mobile-head animated fadeIn" style="font-size:3em; color:#ffffff; animation-delay: 1s; -webkit-animation-delay: 1s; /* Safari 4.0 - 8.0 */">이씨플라자</div>
- <div class="mobile-head animated fadeIn" style="font-size:3em; color:#ffffff; animation-delay: 2s; -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */"><i class="fas fa-address-card"></i></div>
+ <div class="mobile-head animated fadeIn slide-in-up" style="font-size:10vw; color:#ffffff">최적의 온라인마케팅</div>
+ <div class="mobile-head animated fadeIn" style="font-size:10vw; color:#ffffff; animation-delay: 1s; -webkit-animation-delay: 1s; /* Safari 4.0 - 8.0 */">이씨플라자</div>
+ <div class="mobile-head animated fadeIn" style="font-size:10vw; color:#ffffff; animation-delay: 2s; -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */"><i class="fas fa-address-card"></i></div>
 </div>
 
-<div class="mobile" style="">
- <div class="mobile-head animated fadeIn slide-in-up" style="font-size:1em; color:#ffffff">최적의 온라인마케팅</div>
- <div class="mobile-head animated fadeIn" style="font-size:1em; color:#ffffff; animation-delay: 1s; -webkit-animation-delay: 1s; /* Safari 4.0 - 8.0 */">이씨플라자</div>
- <div class="mobile-head animated fadeIn" style="font-size:1em; color:#ffffff; animation-delay: 2s; -webkit-animation-delay: 2s; /* Safari 4.0 - 8.0 */"><i class="fas fa-address-card"></i></div>
-</div>
 
 
 </body>
