--- a/newsletter.html
+++ b/newsletter.html
@@ -71,30 +71,8 @@
 
   </style>
 
-  <!-- Progressive Enhancements -->
-  <style>
-
-      /* What it does: Hover styles for buttons */
-      .button-td,
-      .button-a {
-          transition: all 100ms ease-in;
-      }
-      .button-td:hover,
-      .button-a:hover {
-          background: #555555 !important;
-          border-color: #555555 !important;
-      }
-
-  </style>
-
 
     <center style="width: 100%; background: #222222;">
-
-        <!-- Visually Hidden Preheader Text : BEGIN -->
-        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">
-            (Optional) This text will appear in the inbox preview, but not the email body.
-        </div>
-        <!-- Visually Hidden Preheader Text : END -->
 
         <!--
             Set the email width. Defined in two places:
@@ -102,62 +80,9 @@
             2. MSO tags for Desktop Windows Outlook enforce a 600px width.
         -->
         <div style="max-width: 600px; margin: auto;">
-            <!--[if (gte mso 9)|(IE)]>
-            <table cellspacing="0" cellpadding="0" border="0" width="600" align="center">
-            <tr>
-            <td>
-            <![endif]-->
 
-            <!-- Email Header : BEGIN -->
-            <table cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 600px;">
-				<tr>
-					<td style="padding: 20px 0; text-align: center">
-						<img src="http://placehold.it/200x50" width="200" height="50" alt="alt_text" border="0">
-					</td>
-				</tr>
-            </table>
-            <!-- Email Header : END -->
+            <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#ffffff" width="100%" style="max-width:600px;">
 
-            <!-- Email Body : BEGIN -->
-            <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#ffffff" width="100%" style="max-width: 600px;">
-
-                <!-- Hero Image, Flush : BEGIN -->
-                <tr>
-					<td>
-						<img src="http://placehold.it/600x300" width="600" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 600px;">
-					</td>
-                </tr>
-                <!-- Hero Image, Flush : END -->
-
-                <!-- 1 Column Text + Button : BEGIN -->
-                <tr>
-                    <td>
-                        <table cellspacing="0" cellpadding="0" border="0" width="100%">
-                        	<tr>
-	                            <td style="padding: 40px; font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555;">
-	                                Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent laoreet malesuada cursus. Maecenas scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut&nbsp;erat.
-	                                <br><br>
-	                                <!-- Button : Begin -->
-	                                <table cellspacing="0" cellpadding="0" border="0" align="center" style="Margin: auto;">
-	                                    <tr>
-	                                        <td style="border-radius: 3px; background: #222222; text-align: center;" class="button-td">
-	                                            <a href="http://www.google.com" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
-				                                    &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:#ffffff">A Button</span>&nbsp;&nbsp;&nbsp;&nbsp;
-				                                </a>
-	                                        </td>
-	                                    </tr>
-	                                </table>
-	                                <!-- Button : END -->
-	                                <br>
-	                                Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent laoreet malesuada cursus. Maecenas scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut&nbsp;erat.
-	                            </td>
-								</tr>
-                        </table>
-                    </td>
-                </tr>
-                <!-- 1 Column Text + Button : BEGIN -->
-
-                <!-- 2 Even Columns : BEGIN -->
                 <tr>
                     <td bgcolor="#ffffff" align="center" height="100%" valign="top" width="100%" style="padding-bottom: 40px">
                         <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="max-width:560px;">
@@ -191,34 +116,116 @@
                                     </table>
                                 </td>
                             </tr>
+
+
+
                         </table>
                     </td>
                 </tr>
                 <!-- Two Even Columns : END -->
 
             </table>
-            <!-- Email Body : END -->
 
-            <!-- Email Footer : BEGIN -->
-            <table cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px;">
+        </div>
+
+        <div style="max-width: 600px; margin: auto;">
+
+            <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#ffffff" width="100%" style="max-width: 600px;">
+
                 <tr>
-                    <td style="padding: 40px 10px;width: 100%;font-size: 12px; font-family: sans-serif; mso-height-rule: exactly; line-height:18px; text-align: center; color: #888888;">
-                        <webversion style="color:#cccccc; text-decoration:underline; font-weight: bold;">View as a Web Page</webversion>
-                        <br><br>
-                        Company Name<br><span class="mobile-link--footer">123 Fake Street, SpringField, OR, 97477 US</span><br><span class="mobile-link--footer">(123) 456-7890</span>
-                        <br><br>
-                        <unsubscribe style="color:#888888; text-decoration:underline;">unsubscribe</unsubscribe>
+                    <td bgcolor="#ffffff" align="center" height="100%" valign="top" width="100%" style="padding-bottom: 40px">
+                        <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="max-width:560px;">
+                            <tr>
+                                <td align="center" valign="top" width="50%">
+                                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="font-size: 14px;text-align: left;">
+                                        <tr>
+                                            <td style="text-align: center; padding: 0 10px;">
+                                                <img src="http://placehold.it/200" width="200" alt="" style="border: 0;width: 100%;max-width: 200px;" class="center-on-narrow">
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="text-align: center;font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
+                                                Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora per conubia nostra, per torquent inceptos&nbsp;himenaeos.
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                                <td align="center" valign="top" width="50%">
+                                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="font-size: 14px;text-align: left;">
+                                        <tr>
+                                            <td style="text-align: center; padding: 0 10px;">
+                                                <img src="http://placehold.it/200" width="200" alt="" style="border: 0;width: 100%;max-width: 200px;" class="center-on-narrow">
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="text-align: center;font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
+                                                Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora per conubia nostra, per torquent inceptos&nbsp;himenaeos.
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+
+
+
+                        </table>
                     </td>
                 </tr>
-            </table>
-            <!-- Email Footer : END -->
+                <!-- Two Even Columns : END -->
 
-            <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
             </table>
-            <![endif]-->
+
         </div>
+
+        <div style="max-width: 600px; margin: auto;">
+
+            <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#ffffff" width="100%" style="max-width: 600px;">
+
+                <tr>
+                    <td bgcolor="#ffffff" align="center" height="100%" valign="top" width="100%" style="padding-bottom: 40px">
+                        <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="max-width:560px;">
+                            <tr>
+                                <td align="center" valign="top" width="50%">
+                                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="font-size: 14px;text-align: left;">
+                                        <tr>
+                                            <td style="text-align: center; padding: 0 10px;">
+                                                <img src="http://placehold.it/200" width="200" alt="" style="border: 0;width: 100%;max-width: 200px;" class="center-on-narrow">
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="text-align: center;font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
+                                                Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora per conubia nostra, per torquent inceptos&nbsp;himenaeos.
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                                <td align="center" valign="top" width="50%">
+                                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="font-size: 14px;text-align: left;">
+                                        <tr>
+                                            <td style="text-align: center; padding: 0 10px;">
+                                                <img src="http://placehold.it/200" width="200" alt="" style="border: 0;width: 100%;max-width: 200px;" class="center-on-narrow">
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="text-align: center;font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
+                                                Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora per conubia nostra, per torquent inceptos&nbsp;himenaeos.
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+
+
+
+                        </table>
+                    </td>
+                </tr>
+                <!-- Two Even Columns : END -->
+
+            </table>
+
+        </div>
+
     </center>
 </div>
 
