--- a/newsletter.html
+++ b/newsletter.html
@@ -75,7 +75,6 @@
   
               <table border="0" cellspacing="0" cellpadding="10" border="0" align="center" bgcolor="#ffffff" width="100%">
                               <!-- style="max-width:600px;" -->
-  
                   <tr>
                       <td bgcolor="#ffffff" align="center" height="100%" valign="top" width="100%" style="padding-bottom: 40px">
                           <table border="0" cellpadding="10" cellspacing="0" align="center" width="100%">
@@ -83,6 +82,11 @@
                               <tr>
                                   <td align="center" valign="top" width="50%">
                                       <table cellspacing="0" cellpadding="10" border="0" width="100%" style="font-size: 14px;text-align: left;">
+                                        <tr>
+                                          <td style="text-align: center;font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
+                                              정치
+                                            </td>
+                                          </tr>
                                           <tr>
                                               <td style="text-align: center; padding: 0 10px;">
                                                   <img src="http://placehold.it/300" width="300" alt="" style="border: 0;width: 100%;max-width: 300px; max-height:300px" class="center-on-narrow">
@@ -91,14 +95,22 @@
                                           <tr>
                                               <td style="text-align: center;font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
                                                   Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora per conubia nostra, per torquent inceptos&nbsp;himenaeos.
-                                              </td>
-                                          </tr>
+                                    </td>
+                                </tr>
                                       </table>
                                   </td>
   
                                   <td align="center" valign="top" width="50%">
+  
                                       <table cellspacing="0" cellpadding="10" border="0" width="100%" style="font-size: 14px;text-align: left;">
+  
+                                            <tr>
                                               <tr>
+                                                <td style="text-align: center;font-family: sans-serif; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
+                                                    정치
+                                                  </td>
+                                                </tr>
+  
                                                                                           <td style="text-align: center; padding: 0 10px;">
                                                                                                   <img src="http://placehold.it/300" width="300" alt="" style="border: 0;width: 100%;max-width: 300px; max-height:300px" class="center-on-narrow">
                                                                                           </td>
@@ -110,8 +122,12 @@
                                           </tr>
                                       </table>
                                   </td>
-                              </tr>
-                          </table>
+                                </tr>
+  
+  
+  
+                      </tr>
+                    </table>
   
   
                   <!-- Two Even Columns : END -->
